protected routes + created user model

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,14 @@
 @import '~antd/dist/antd.css';
 
+.loading {
+  position: fixed;
+  z-index: 1;
+  top: 40%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .App {
   text-align: center;
 }
